# eSAIS-stxxl

./: CMakeLists.txt  Doxyfile  doxymain.h
algo/: CMakeLists.txt
common/: CMakeLists.txt
containers/: CMakeLists.txt  test_sorter.cpp
include/stxxl/bits/: counting_ptr.h  parallel.h
include/stxxl/bits/containers/: deque2.h  pager.h  sorter.h
include/stxxl/bits/mng/: mng.h
include/stxxl/bits/stream/: sort_stream.h  sorted_runs.h
io/: CMakeLists.txt
lib/: CMakeLists.txt
mng/: CMakeLists.txt  mng.cpp
stream/: CMakeLists.txt  test_loop.cpp  test_push_sort.cpp  test_sorted_runs.cpp  test_stream1.cpp
utils/: CMakeLists.txt
